chore: Fixing build for each platform

--- a/reference/ToDo/uno.todo-main/src/Directory.Build.props
+++ b/reference/ToDo/uno.todo-main/src/Directory.Build.props
@@ -16,9 +16,9 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<UnoVersion>4.7.0-dev.73</UnoVersion>
-		<UnoExtensionsVersion>2.3.0-dev.263</UnoExtensionsVersion>
-		<UnoToolkitVersion>2.4.0-dev.110</UnoToolkitVersion>
-		<UnoMaterialVersion>2.4.0-dev.57</UnoMaterialVersion>
+		<UnoVersion>5.1.87</UnoVersion>
+		<UnoExtensionsVersion>4.0.0</UnoExtensionsVersion>
+		<UnoToolkitVersion>5.1.7</UnoToolkitVersion>
+		<UnoMaterialVersion>4.1.1</UnoMaterialVersion>
 	</PropertyGroup>
 </Project>
