--- a/reference/Com/Commerce/Commerce/Commerce.csproj
+++ b/reference/Com/Commerce/Commerce/Commerce.csproj
@@ -1,13 +1,12 @@
 ﻿<Project Sdk="Uno.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>$(DotNetVersion)-browserwasm;$(DotNetVersion)-android;$(DotNetVersion)-ios;$(DotNetVersion)-maccatalyst;$(DotNetVersion)-desktop;$(DotNetVersion)</TargetFrameworks>
-    <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) or '$(EnableWindowsTargeting)' == 'true'">$(TargetFrameworks);$(DotNetVersion)-windows10.0.19041</TargetFrameworks>
-    <!--
-      Under Linux we can't restore ios or maccatalyst workloads are not available on linux https://github.com/dotnet/runtime/issues/85505
-      dotnet restore would fail if they are not removed from the list
-    -->
-    <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('linux')) == 'true'">$(TargetFrameworks.Replace("$(DotNetVersion)-ios","").Replace("$(DotNetVersion)-maccatalyst",""))</TargetFrameworks>
-    <TargetFrameworks Condition="'$(OverrideTargetFramework)'!=''">$(OverrideTargetFramework)</TargetFrameworks>
+    <TargetFrameworks>
+      $(DotNetVersion)-browserwasm;
+      $(DotNetVersion)-android;
+      $(DotNetVersion)-maccatalyst;
+      $(DotNetVersion)-windows10.0.19041;
+      $(DotNetVersion)-desktop;
+    </TargetFrameworks>
 
     <OutputType>Exe</OutputType>
     <SingleProject>true</SingleProject>
@@ -30,13 +29,26 @@
       must be the highest found in https://www.nuget.org/packages/Microsoft.Windows.SDK.NET.Ref.
     -->
     <!-- <WindowsSdkPackageVersion>10.0.22621.28</WindowsSdkPackageVersion> -->
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" />
-    <PackageReference Include="Uno.Extensions.Reactive.Messaging" />
-    <PackageReference Include="Uno.Extensions.Reactive.WinUI" />
-  </ItemGroup>
 
+    <!--
+      UnoFeatures let's you quickly add and manage implicit package references based on the features you want to use.
+      https://aka.platform.uno/singleproject-features
+    -->
+    <UnoFeatures>
+      Material;
+      Hosting;
+      Toolkit;
+      Logging;
+      Mvux;
+      Mvvm;
+      Configuration;
+      Http;
+      Serialization;
+      Localization;
+      Navigation;
+      ExtensionsCore;
+    </UnoFeatures>
+  </PropertyGroup>
   <ItemGroup>
     <Content Update="Assets\products.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
@@ -51,4 +63,5 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+
 </Project>
