--- a/reference/Com/Commerce/Commerce/Properties/launchsettings.json
+++ b/reference/Com/Commerce/Commerce/Properties/launchsettings.json
@@ -8,37 +8,42 @@
     }
   },
   "profiles": {
-    "Commerce (WinAppSDK Unpackaged)": {
-      "commandName": "Project"
-    },
-    "Commerce (WinAppSDK Packaged)": {
-      "commandName": "MsixPackage"
-    },
-    "Commerce (Desktop)": {
-      "commandName": "Project"
-    },
-    "Commerce (Desktop WSL2)": {
-      "commandName": "WSL2",
-      "commandLineArgs": "{ProjectDir}/bin/Debug/net8.0-desktop/Commerce.dll",
-      "distributionName": ""
-    },
-    "Commerce (Wasm)": {
+    // This profile is first in order for dotnet run to pick it up by default
+    "Commerce (WebAssembly)": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5001",
+      "applicationUrl": "http://localhost:5000",
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Commerce (Wasm - IIS Express)": {
+    "Commerce (WebAssembly IIS Express)": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Commerce (WinAppSDK Unpackaged)": {
+      "commandName": "Project",
+      "compatibleTargetFramework": "windows"
+    },
+    "Commerce (WinAppSDK Packaged)": {
+      "commandName": "MsixPackage",
+      "compatibleTargetFramework": "windows"
+    },
+    "Commerce (Desktop)": {
+      "commandName": "Project",
+      "compatibleTargetFramework": "desktop"
+    },
+    "Commerce (Desktop WSL2)": {
+      "commandName": "WSL2",
+      "commandLineArgs": "{ProjectDir}/bin/Debug/net8.0-desktop/Commerce.dll",
+      "distributionName": "",
+      "compatibleTargetFramework": "desktop"
     }
   }
 }
