chore: Fix CSM-MVUX logo

--- a/reference/Counter/CSharp-MVUX/Counter/Counter.csproj
+++ b/reference/Counter/CSharp-MVUX/Counter/Counter.csproj
@@ -43,7 +43,9 @@
     <None Remove="Assets\logo.svg" />
   </ItemGroup>
   <ItemGroup>
-    <UnoImage Include="Assets\logo.svg" />
+    <UnoImage Include="Assets\logo.svg">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </UnoImage>
   </ItemGroup>
 
 </Project>
