--- a/reference/SimpleCalc/CSharp-MVVM/SimpleCalculator/Properties/launchsettings.json
+++ b/reference/SimpleCalc/CSharp-MVVM/SimpleCalculator/Properties/launchsettings.json
@@ -7,30 +7,43 @@
       "sslPort": 0
     }
   },
-	"profiles": {
-		"SimpleCalculator.Windows (Unpackaged)": {
-			"commandName": "Project"
-		},
-		"SimpleCalculator.Windows (Package)": {
-			"commandName": "MsixPackage"
-		},
-    "SimpleCalculator.Wasm": {
+  "profiles": {
+    // This profile is first in order for dotnet run to pick it up by default
+    "SimpleCalculator (WebAssembly)": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5001",
+      "applicationUrl": "http://localhost:5000",
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "IIS Express": {
+    "SimpleCalculator (WebAssembly IIS Express)": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "SimpleCalculator (WinAppSDK Unpackaged)": {
+      "commandName": "Project",
+      "compatibleTargetFramework": "windows"
+    },
+    "SimpleCalculator (WinAppSDK Packaged)": {
+      "commandName": "MsixPackage",
+      "compatibleTargetFramework": "windows"
+    },
+    "SimpleCalculator (Desktop)": {
+      "commandName": "Project",
+      "compatibleTargetFramework": "desktop"
+    },
+    "SimpleCalculator (Desktop WSL2)": {
+      "commandName": "WSL2",
+      "commandLineArgs": "{ProjectDir}/bin/Debug/net8.0-desktop/SimpleCalculator.dll",
+      "distributionName": "",
+      "compatibleTargetFramework": "desktop"
     }
-	}
+  }
 }
