fix: Added the ios target framework

--- a/reference/Counter/CSharp-MVUX/Counter/Counter.csproj
+++ b/reference/Counter/CSharp-MVUX/Counter/Counter.csproj
@@ -3,6 +3,7 @@
     <TargetFrameworks>
       $(DotNetVersion)-browserwasm;
       $(DotNetVersion)-android;
+      $(DotNetVersion)-ios;
       $(DotNetVersion)-maccatalyst;
       $(DotNetVersion)-windows10.0.19041;
       $(DotNetVersion)-desktop;
