--- a/reference/SimpleCalc/XAML-MVUX/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/SimpleCalc/XAML-MVUX/SimpleCalculator/SimpleCalculator.csproj
@@ -3,6 +3,7 @@
     <TargetFrameworks>
       $(DotNetVersion)-browserwasm;
       $(DotNetVersion)-android;
+      $(DotNetVersion)-ios;
       $(DotNetVersion)-maccatalyst;
       $(DotNetVersion)-windows10.0.19041;
       $(DotNetVersion)-desktop;
