fix: Added the ios target framework

--- a/reference/Commerce/Commerce/Commerce.csproj
+++ b/reference/Commerce/Commerce/Commerce.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Uno.Sdk">
   <PropertyGroup>
     <TargetFrameworks>
-      $(DotNetVersion)-browserwasm;
-      $(DotNetVersion)-android;
-      $(DotNetVersion)-maccatalyst;
-      $(DotNetVersion)-windows10.0.19041;
-      $(DotNetVersion)-desktop;
-    </TargetFrameworks>
+		$(DotNetVersion)-browserwasm;
+		$(DotNetVersion)-android;
+		$(DotNetVersion)-ios;
+		$(DotNetVersion)-maccatalyst;
+		$(DotNetVersion)-windows10.0.19041;
+		$(DotNetVersion)-desktop;
+	</TargetFrameworks>
 
     <OutputType>Exe</OutputType>
     <SingleProject>true</SingleProject>
