--- a/reference/SimpleCalc/XAML-MVUX/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/SimpleCalc/XAML-MVUX/SimpleCalculator/SimpleCalculator.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Uno.Sdk">
   <PropertyGroup>
     <TargetFrameworks>
-      $(DotNetVersion)-browserwasm;
-      $(DotNetVersion)-android;
-      $(DotNetVersion)-ios;
-      $(DotNetVersion)-maccatalyst;
-      $(DotNetVersion)-windows10.0.19041;
-      $(DotNetVersion)-desktop;
+      net8.0-browserwasm;
+      net8.0-android;
+      net8.0-ios;
+      net8.0-maccatalyst;
+      net8.0-windows10.0.19041;
+      net8.0-desktop;
+      net8.0;
     </TargetFrameworks>
 
     <OutputType>Exe</OutputType>
@@ -15,7 +16,7 @@
     <!-- Display name -->
     <ApplicationTitle>SimpleCalculator</ApplicationTitle>
     <!-- App Identifier -->
-    <ApplicationId>com.companyname.simplecalculator</ApplicationId>
+    <ApplicationId>com.companyname.SimpleCalculator</ApplicationId>
     <!-- Versions -->
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
     <ApplicationVersion>1</ApplicationVersion>
