chore: Shifting control to separate library to ensure separation from sample code

--- a/UI/ManipulableContentControlSample/ManipulableContentControlSample/ManipulableContentControlSample.csproj
+++ b/UI/ManipulableContentControlSample/ManipulableContentControlSample/ManipulableContentControlSample.csproj
@@ -29,4 +29,7 @@
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Condition="$(TargetFramework.Contains('windows10'))" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\InteractionControls\InteractionControls.csproj" />
+  </ItemGroup>
 </Project>
