chore: Renaming control to ZoomContentControl. making style explicit and add implicit style

--- a/UI/ManipulableContentControlSample/InteractionControls/InteractionControls.csproj
+++ b/UI/ManipulableContentControlSample/InteractionControls/InteractionControls.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Uno.WinUI"/>
+    <PackageReference Include="Uno.WinUI" />
   </ItemGroup>
 
 
@@ -35,5 +35,10 @@
       </ItemGroup>
     </When>
   </Choose>
+
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="ZoomContentControl.xaml" />
+  </ItemGroup>
 
 </Project>
