fix: Updated target frameworks

--- a/reference/Counter/CSharp-MVUX/Counter/Counter.csproj
+++ b/reference/Counter/CSharp-MVUX/Counter/Counter.csproj
@@ -1,16 +1,16 @@
 <Project Sdk="Uno.Sdk">
   <PropertyGroup>
     <TargetFrameworks>
-      $(DotNetVersion)-browserwasm;
-      $(DotNetVersion)-android;
-      $(DotNetVersion)-ios;
-      $(DotNetVersion)-maccatalyst;
-      $(DotNetVersion)-windows10.0.19041;
-      $(DotNetVersion)-desktop;
+      net8.0-android;
+      net8.0-ios;
+      net8.0-maccatalyst;
+      net8.0-windows10.0.19041;
+      net8.0-desktop;
+      net8.0-browserwasm;
     </TargetFrameworks>
 
     <OutputType>Exe</OutputType>
-    <SingleProject>true</SingleProject>
+    <UnoSingleProject>true</UnoSingleProject>
 
     <!-- Display name -->
     <ApplicationTitle>Counter</ApplicationTitle>
