chore: Canary fixes

--- a/UI/OnnxSamples/OnnxSamples/OnnxSamples.Mobile/OnnxSamples.Mobile.csproj
+++ b/UI/OnnxSamples/OnnxSamples/OnnxSamples.Mobile/OnnxSamples.Mobile.csproj
@@ -45,6 +45,8 @@
       <ItemGroup>
         <PackageReference Include="Xamarin.Google.Android.Material" Version="1.7.0.1" />
         <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.36" />
+		  <PackageReference Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.6" />
+		  <PackageReference Include="Xamarin.Kotlin.StdLib.Jdk8" Version="1.9.23" />
       </ItemGroup>
       <ItemGroup>
         <AndroidEnvironment Include="Android/environment.conf" />
