chore: Update TubePlayer to latest

--- a/reference/TubePlayer/src/Directory.Build.props
+++ b/reference/TubePlayer/src/Directory.Build.props
@@ -14,9 +14,9 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <UnoExtensionsVersion>4.1.0-dev.74</UnoExtensionsVersion>
-    <UnoToolkitVersion>5.2.0-dev.48</UnoToolkitVersion>
-    <UnoThemesVersion>4.2.0-dev.26</UnoThemesVersion>
-    <UnoCSharpMarkupVersion>5.2.0-dev.61</UnoCSharpMarkupVersion>
+    <UnoExtensionsVersion>4.1.1</UnoExtensionsVersion>
+    <UnoToolkitVersion>6.0.2</UnoToolkitVersion>
+    <UnoThemesVersion>5.0.1</UnoThemesVersion>
+    <UnoCSharpMarkupVersion>5.2.0</UnoCSharpMarkupVersion>
   </PropertyGroup>
 </Project>
