--- a/reference/TubePlayer/src/TubePlayer/appsettings.development.json
+++ b/reference/TubePlayer/src/TubePlayer/appsettings.development.json
@@ -1,5 +1,6 @@
 {
   "AppConfig": {
+    "Environment": "Development",
     "Title": "TubePlayer"
   },
   "YoutubeEndpoint": {
@@ -9,6 +10,10 @@
   },
   "YoutubePlayerEndpoint": {
     "Url": "https://www.youtube.com/youtubei/v1",
+    "UseNativeHandler": true
+  },
+  "ApiClient": {
+    "Url": "https://localhost:5002",
     "UseNativeHandler": true
   }
 }
