--- a/reference/TubePlayer/src/TubePlayer/appsettings.json
+++ b/reference/TubePlayer/src/TubePlayer/appsettings.json
@@ -1,5 +1,16 @@
 {
   "AppConfig": {
     "Environment": "Production"
+  },
+  "ApiClient": {
+    "UseNativeHandler": true
+  },
+  "LocalizationConfiguration": {
+    "Cultures": [
+      "es",
+      "fr",
+      "pt-BR",
+      "en"
+    ]
   }
 }
