chore: Update to latest and fix appsettings

--- a/reference/ToDo/Directory.Build.props
+++ b/reference/ToDo/Directory.Build.props
@@ -14,8 +14,8 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <UnoExtensionsVersion>4.1.0-dev.99</UnoExtensionsVersion>
-    <UnoToolkitVersion>5.2.0-dev.56</UnoToolkitVersion>
-    <UnoThemesVersion>4.2.0-dev.30</UnoThemesVersion>
+    <UnoExtensionsVersion>4.1.1</UnoExtensionsVersion>
+    <UnoToolkitVersion>6.0.2</UnoToolkitVersion>
+    <UnoThemesVersion>5.0.1</UnoThemesVersion>
   </PropertyGroup>
 </Project>
