chore: Update to latest template

--- a/reference/ToDo/ToDo/ToDo.csproj
+++ b/reference/ToDo/ToDo/ToDo.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Uno.Sdk">
+<Project Sdk="Uno.Sdk">
   <PropertyGroup>
     <TargetFrameworks>
       net8.0-android;
@@ -36,7 +36,9 @@
       https://aka.platform.uno/singleproject-features
     -->
     <UnoFeatures>
+      Material;
       Hosting;
+      Toolkit;
       Mvux;
       Mvvm;
       Configuration;
@@ -46,8 +48,6 @@
       Authentication;
       Navigation;
       ExtensionsCore;
-      Material;
-      Toolkit;
     </UnoFeatures>
   </PropertyGroup>
   <ItemGroup>
@@ -63,5 +63,5 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" />
   </ItemGroup>
-  
+
 </Project>
