--- a/reference/ToDo/ToDo/appsettings.json
+++ b/reference/ToDo/ToDo/appsettings.json
@@ -8,7 +8,15 @@
     "Scopes": [ "Tasks.Read", "User.Read", "Tasks.ReadWrite" ],
     "RedirectUri": "uno-todoapp://auth"
   },
+  "ApiClient": {
+    "UseNativeHandler": true
+  },
   "LocalizationConfiguration": {
-    "Cultures": [ "en", "es", "fr" ]
+    "Cultures": [
+      "es",
+      "fr",
+      "pt-BR",
+      "en"
+    ]
   }
 }
