--- a/reference/ToDo/ToDo/appsettings.development.json
+++ b/reference/ToDo/ToDo/appsettings.development.json
@@ -1,5 +1,12 @@
 {
   "Mock": {
     "IsEnabled": true
+  },
+  "AppConfig": {
+    "Environment": "Development"
+  },
+  "ApiClient": {
+    "Url": "https://localhost:5002",
+    "UseNativeHandler": true
   }
 }
