feat: add code for the app.

--- a/reference/Counter/CSharp-MVUX/Counter/Counter/Counter.csproj
+++ b/reference/Counter/CSharp-MVUX/Counter/Counter/Counter.csproj
@@ -40,5 +40,11 @@
       Mvux;
     </UnoFeatures>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="Assets\logo.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <UnoImage Include="Assets\logo.svg" />
+  </ItemGroup>
 
 </Project>
