chore: Update to latest template

--- a/reference/ToDo/Directory.Packages.props
+++ b/reference/ToDo/Directory.Packages.props
@@ -11,5 +11,7 @@
     <PackageVersion Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
     <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="7.4.1" />
+    <PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
+    <PackageVersion Include="SkiaSharp.Skottie" Version="2.88.3" />
   </ItemGroup>
 </Project>
