--- a/reference/ToDo/ToDo/appsettings.json
+++ b/reference/ToDo/ToDo/appsettings.json
@@ -8,6 +8,9 @@
     "Scopes": [ "Tasks.Read", "User.Read", "Tasks.ReadWrite" ],
     "RedirectUri": "uno-todoapp://auth"
   },
+  "AppConfig": {
+    "Environment": "Production"
+  },
   "ApiClient": {
     "UseNativeHandler": true
   },
