--- a/reference/ToDo/ToDo/Properties/launchSettings.json
+++ b/reference/ToDo/ToDo/Properties/launchSettings.json
@@ -27,6 +27,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
+    // Note: In order to select this profile, you'll need to comment the `Packaged` profile below until this is fixed: https://aka.platform.uno/wasdk-maui-debug-profile-issue
     "ToDo (WinAppSDK Unpackaged)": {
       "commandName": "Project",
       "compatibleTargetFramework": "windows"
