--- a/reference/Commerce/Directory.Packages.props
+++ b/reference/Commerce/Directory.Packages.props
@@ -7,4 +7,7 @@
   -->
   <ItemGroup>
   </ItemGroup>
+  <ItemGroup>
+    <PackageVersion Include="SkiaSharp.Views.WinUI" Version="2.88.8" />
+  </ItemGroup>
 </Project>
