chore: Move to 5.2.80

--- a/reference/Counter/XAML-MVUX/Counter/Counter.csproj
+++ b/reference/Counter/XAML-MVUX/Counter/Counter.csproj
@@ -36,7 +36,7 @@
       https://aka.platform.uno/singleproject-features
     -->
     <UnoFeatures>
-      Mvux;
+      MVUX;
     </UnoFeatures>
   </PropertyGroup>
 </Project>
