fix: Updated the project with the latest templates

--- a/reference/TubePlayer/TubePlayer/TubePlayer.csproj
+++ b/reference/TubePlayer/TubePlayer/TubePlayer.csproj
@@ -40,20 +40,12 @@
       Material;
       Hosting;
       Toolkit;
-      Mvux;
+      MVUX;
       Configuration;
       Navigation;
       Http;
       MediaElement;
     </UnoFeatures>
   </PropertyGroup>
-  <ItemGroup>
-    <None Remove="Assets\Icons\back.svg" />
-    <None Remove="Assets\navigation_bar.svg" />
-  </ItemGroup>
-  <ItemGroup>
-    <UnoImage Include="Assets\Icons\back.svg" />
-    <UnoImage Include="Assets\navigation_bar.svg" />
-  </ItemGroup>
 
 </Project>
