--- a/reference/TubePlayer/Directory.Packages.props
+++ b/reference/TubePlayer/Directory.Packages.props
@@ -1,9 +1,8 @@
 <Project ToolsVersion="15.0">
   <!--
-    Note that the $(UnoVersion) comes from the Uno.Sdk. You should not update it manually. To update the version of Uno,
-    you should instead update the Sdk version in the global.json file.
+    To update the version of Uno, you should instead update the Sdk version in the global.json file.
 
-    See https://aka.platform.uno/upgrade-uno-packages for more information.
+    See https://aka.platform.uno/using-uno-sdk for more information.
   -->
   <ItemGroup>
   </ItemGroup>
